--- a/Final/index.html
+++ b/Final/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Travel Destinations in Cambodia</title>
 </head>
+<header><h1>Travel Destinations</h1></header>
 <body>
     <nav id="nav">
-        <h1>Travel Destinations</h1>
         <ul>
             <li><a href="index.html"> Home </a></li>
             <li><a href="Siem_Reap.html"> Siem Reap</a></li>
