--- a/Final/index.html
+++ b/Final/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Travel Destinations in Cambodia</title>
+    <title>Traveling Destinations</title>
 </head>
-<header><h1>Travel Destinations</h1></header>
-<body>
+<header>
     <nav id="nav">
         <ul>
             <li><a href="index.html"> Home </a></li>
-            <li><a href="Siem_Reap.html"> Siem Reap</a></li>
+            <li><a href="Siem_Reap.html"> SiemReap</a></li>
             <li><a href="Battambang.html">Battambang</a></li>
             <li><a href="Kampot.html">Kampot</a></li>
         </ul>
     </nav>
+</header>
+<body>
+    <h1>Traveling Destinations<br>
+    in Cambodia
+    </h1>
     <main>
-        <h2></h2>
+        <div id="box-1" class="box dotted"></div>
+        <div id="box-2" class="box solid"></div>
+        <div id="box-3" class="box dotted"></div> 
     </main>    
 </body>
 </html>
