--- a/Final/index.html
+++ b/Final/index.html
@@ -21,9 +21,15 @@
     in Cambodia
     </h1>
     <main>
-        <div id="box-1" class="box dotted"></div>
-        <div id="box-2" class="box solid"></div>
-        <div id="box-3" class="box dotted"></div> 
+        <div id="box-1" class="box dotted">
+            <figcaption>See more!!</figcaption>
+        </div>
+        <div id="box-2" class="box solid">
+            <figcaption>See more!!</figcaption>
+        </div>
+        <div id="box-3" class="box dotted">
+            <figcaption>See more!!</figcaption>
+        </div>
     </main>    
 </body>
 </html>
