--- a/Final/index.html
+++ b/Final/index.html
@@ -10,7 +10,7 @@
     <nav id="nav">
         <ul>
             <li><a href="index.html"> Home </a></li>
-            <li><a href="Siem_Reap.html"> SiemReap</a></li>
+            <li><a href="Siem_Reap.html"> Siem Reap</a></li>
             <li><a href="Battambang.html">Battambang</a></li>
             <li><a href="Kampot.html">Kampot</a></li>
         </ul>
@@ -21,13 +21,13 @@
     in Cambodia
     </h1>
     <main>
-        <div id="box-1" class="box dotted">
+        <div id="box-1" >
             <figcaption>See more!!</figcaption>
         </div>
-        <div id="box-2" class="box solid">
+        <div id="box-2">
             <figcaption>See more!!</figcaption>
         </div>
-        <div id="box-3" class="box dotted">
+        <div id="box-3">
             <figcaption>See more!!</figcaption>
         </div>
     </main>    
