--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -28,5 +28,11 @@
 <h2>Siem Reap Province in northwestern Cambodia offers a diverse and captivating experience beyond its famous tourist destinations. Its vibrant community, rich cultural heritage, and picturesque landscapes provide an authentic glimpse into the everyday lives of the Cambodian people. Visitors can engage with the locals and learn about their traditional customs and way of life.</h2>
 <br>
 <h2>Here are some locations that you must go when arrived in Siem Reap:</h2>
+<ol>
+    <li>Angkor Wat temple</li>
+    <li>Bakeng Moutain</li>
+    <li>Kulen Moutain</li>
+    <li>Pradak Village</li>
+</ol>
 </body>
 </html>
