--- a/Final/index.html
+++ b/Final/index.html
@@ -22,13 +22,13 @@
     </h1>
     <main>
         <div id="box-1" >
-            <figcaption>See more!!</figcaption>
+            <figcaption><a href="Siem_Reap.html">Click here to see more!!</a></figcaption>
         </div>
         <div id="box-2">
-            <figcaption>See more!!</figcaption>
+            <figcaption><a href="Battambang.html">Click here to see more!!</a></figcaption>
         </div>
         <div id="box-3">
-            <figcaption>See more!!</figcaption>
+            <figcaption><a href="Kampot.html">Click here to see more!!</a></figcaption>
         </div>
     </main>    
 </body>
