--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -5,10 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siem Reap province</title>
     <style>
-        header {
-            text-align: center;
-            font-size: 1.5rem;
-            padding: 10px;
+        header { display: flex;
+            justify-content: right;
+            min-height: 0vh;
+            background-size: 100% 100%;
+            background-repeat: no-repeat; 
+            display: flex;
+            flex-wrap: wrap;
+        }
+        #nav{
+            display: flex;
+            justify-content: space-around;;
+            align-items: center;
+            color:#FFFFFF
+        }
+        #nav h1{
+            color: aliceblue;
+            font-size: 2rem;
+            display: flex;
+            font-family: cursive;             
+        }
+        #nav ul{
+            display: flex;
+            flex-wrap: wrap;
+        }
+        #nav ul li{
+            list-style: none;
+            padding: 3px 15px 3px 15px;
+        }
+        #nav ul li:hover,#phone a:hover,#mobile_menu ul li:hover{
+            background: gray;
+            cursor: pointer;
+        }
+        #nav ul li a {
+            text-decoration: none;
+            color: #FFFFFF;
+            font-size: auto;
         }
         body {
             font-size: 100%;
@@ -56,11 +88,24 @@
             margin-top: 10px;
             text-align: center;
         }
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
-<header><h1>Siem Reap Province</h1></header>
+<header>
+    <nav id="nav">
+        <ul>
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="Siem_Reap.html"> Siem Reap</a></li>
+            <li><a href="Battambang.html">Battambang</a></li>
+            <li><a href="Kampot.html">Kampot</a></li>
+        </ul>
+    </nav>
+</header>
 <body>
-<h2>Siem Reap Province in northwestern Cambodia offers a diverse and captivating experience beyond its famous tourist destinations. Its vibrant community, rich cultural heritage, and picturesque landscapes provide an authentic glimpse into the everyday lives of the Cambodian people. Visitors can engage with the locals and learn about their traditional customs and way of life.</h2>
+    <h1>Siem Reap province</h1>
+    <h2>Siem Reap Province in northwestern Cambodia offers a diverse and captivating experience beyond its famous tourist destinations. Its vibrant community, rich cultural heritage, and picturesque landscapes provide an authentic glimpse into the everyday lives of the Cambodian people. Visitors can engage with the locals and learn about their traditional customs and way of life.</h2>
 <br>
 <h2>Here are some locations that you must go when arrived in Siem Reap:</h2>
 <section id="destinations">
