--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -21,7 +21,7 @@
         }
         #nav h1{
             color: aliceblue;
-            font-size: 2rem;
+            font-size: 1rem;
             display: flex;
             font-family: cursive;             
         }
@@ -40,15 +40,14 @@
         #nav ul li a {
             text-decoration: none;
             color: #FFFFFF;
-            font-size: auto;
+            font-size: 1.2rem;
         }
         body {
             font-size: 100%;
-            font-family: cursive, Arial, Helvetica, sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #ADBBDA;
         }
         h2 {
-            font-size:large;
             font-weight: lighter;
             text-justify: justify;
             text-indent: 50px;
