--- a/Final/Battambang.html
+++ b/Final/Battambang.html
@@ -9,28 +9,30 @@
 <body>
 <header>
 <h1>Battambang Province</h1>
-<p>Battambang province, located in northwestern Cambodia, offers a captivating blend of history, culture, and natural beauty. It's known for its rich history, beautiful scenery, and delicious cuisine. Battambang province is a great place to visit for those who want to experience the culture, history, and natural beauty of Cambodia. With its friendly people, delicious food, and unique attractions, Battambang is sure to leave a lasting impression on visitors.</p>
+<!-- <p>Battambang province, located in northwestern Cambodia, offers a captivating blend of history, culture, and natural beauty. It's known for its rich history, beautiful scenery, and delicious cuisine. Battambang province is a great place to visit for those who want to experience the culture, history, and natural beauty of Cambodia. With its friendly people, delicious food, and unique attractions, Battambang is sure to leave a lasting impression on visitors.</p> -->
 </header>
 <br>
-<main>
+
 <h2>Here are some of the popular things to see and do in Battambang province:</h2>
+
+
 <figure>
     <img src="battambang_city.png" alt="Explore the city of Battambang" width="300" height="200">
-    <figcaption><strong>Battambang City: </strong>Take a walk or rent a bicycle to explore the city's charming streets and colonial architecture. Be sure to visit the Psaar Nat (Central Market), Wat Phnom Banan (a 16th-century pagoda), and the Battambang Provincial Museum.</figcaption>
+    <figcaption><strong>Battambang City </strong></figcaption>
    </figure>
    <figure>
     <img src="bamboo_train.png" alt="Take a ride on the Bamboo Train" width="300" height="200">
-    <figcaption><strong>Bamboo Train: </strong>This unique mode of transportation is a must-do for any visitor to Battambang. The Bamboo Train is a small platform made of bamboo that rides on railway tracks. It's a fun and scenic way to see the Cambodian countryside.</figcaption>
+    <figcaption><strong>Bamboo Train </strong></figcaption>
    </figure>
    <figure>
     <img src="sangkae_river.png" alt="Visit Sangkae river" width="300" height="200">
-    <figcaption><strong>Sangkae River: </strong>Embark on an exhilarating kayaking or canoeing expedition along the Steung Sangkae. Feel the rush as you navigate through its meandering bends, immersing yourself in the sights and sounds of nature.</figcaption>
+    <figcaption><strong>Sangkae River </strong></figcaption>
    </figure>
    <figure>
     <img src="phnom_sompov.png" alt="Visit Phnom Sampeau" width="300" height="200">
-    <figcaption><strong>Phnom Sompeau: </strong> mountain is home to a number of interesting caves, including a cave temple and a cave that was used as a killing field during the Khmer Rouge regime. There's also a beautiful view of the surrounding countryside from the top of the mountain.</figcaption>
+    <figcaption><strong>Phnom Sompeau </strong> </figcaption>
    </figure>
-</main>
+
 <footer>
     <p>  &copy;Travelling Destination 2024</p>
 </footer>
