--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -43,7 +43,6 @@
             font-size: 1.2rem;
         }
         body {
-            font-size: 100%;
             font-family: Arial, Helvetica, sans-serif;
             background-color: #ADBBDA;
         }
@@ -87,9 +86,18 @@
             margin-top: 10px;
             text-align: center;
         }
+
         h1 {
+            font-size: 50px;
             text-align: center;
         }
+        footer {
+        width: auto;
+        text-align: center;
+        padding: 10px;
+        background-color: #3b85cb;
+        color: #fff;
+    }
     </style>
 </head>
 <header>
@@ -103,8 +111,7 @@
     </nav>
 </header>
 <body>
-    <h1>Siem Reap province</h1>
-    <h2>Siem Reap Province in northwestern Cambodia offers a diverse and captivating experience beyond its famous tourist destinations. Its vibrant community, rich cultural heritage, and picturesque landscapes provide an authentic glimpse into the everyday lives of the Cambodian people. Visitors can engage with the locals and learn about their traditional customs and way of life.</h2>
+<h1>Siem Reap province</h1>
 <br>
 <h2>Here are some locations that you must go when arrived in Siem Reap:</h2>
 <section id="destinations">
