--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -85,11 +85,17 @@
         article p {
             margin-top: 10px;
             text-align: center;
+            max-width: 445px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h1 {
             font-size: 50px;
             text-align: center;
+        }
+        figcaption {
+            font-weight: bold;
         }
         footer {
         width: auto;
@@ -119,22 +125,22 @@
     <article>
         <img src="angkor_wat.jpg">
         <figcaption>Angkor Wat temple</figcaption>
-        <p>dks,fsmdv</p>
+        <p>A stunning ancient temple complex renowned for its intricate Khmer architecture, intricate bas-reliefs, and towering central spire, representing the pinnacle of classical Khmer art and architecture.</p>
     </article>
     <article>
         <img src="bakheng.jpg">
         <figcaption>Bakheng mountain</figcaption>
-        <p>djvfgfkg</p>
+        <p>A 10th-century temple mountain in Angkor, Cambodia, known for its stunning sunset views over the surrounding jungle and Angkor Wat complex.</p>
     </article>
     <article>
         <img src="kulen.jpg">
         <figcaption>Kulen mountain</figcaption>
-        <p>dmvkmf nkdf</p>
+        <p>A sacred mountain range in Cambodia, revered for its historical significance, natural beauty, and the site where Jayavarman II proclaimed himself a "universal monarch" in the 9th century, marking the beginning of the Khmer Empire.</p>
     </article>
     <article>
         <img src="pradak.jpg">
         <figcaption>Pradak village</figcaption>
-        <p>ndmmdkdfj</p>
+        <p>A rural community characterized by its traditional Khmer architecture, vibrant cultural heritage, and a serene countryside setting.</p>
     </article>
     </div>
 </section>
