--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -41,6 +41,7 @@
             text-decoration: none;
             color: #FFFFFF;
             font-size: 1.2rem;
+            font-weight: bold;
         }
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -101,7 +102,7 @@
         width: auto;
         text-align: center;
         padding: 10px;
-        background-color: #3b85cb;
+        background-color: #ADBBDA;
         color: #fff;
     }
     </style>
