--- a/Final/Siem_Reap.html
+++ b/Final/Siem_Reap.html
@@ -124,7 +124,7 @@
 <section id="destinations">
     <div class="destination-cards">
     <article>
-        <img src="angkor_wat.jpg">
+        <img src="angkorwat.jpg">
         <figcaption>Angkor Wat temple</figcaption>
         <p>A stunning ancient temple complex renowned for its intricate Khmer architecture, intricate bas-reliefs, and towering central spire, representing the pinnacle of classical Khmer art and architecture.</p>
     </article>
