--- a/Final/Battambang.html
+++ b/Final/Battambang.html
@@ -8,33 +8,44 @@
 </head>
 <body>
 <header>
-<h1>Battambang Province</h1>
+
 <!-- <p>Battambang province, located in northwestern Cambodia, offers a captivating blend of history, culture, and natural beauty. It's known for its rich history, beautiful scenery, and delicious cuisine. Battambang province is a great place to visit for those who want to experience the culture, history, and natural beauty of Cambodia. With its friendly people, delicious food, and unique attractions, Battambang is sure to leave a lasting impression on visitors.</p> -->
+
+
+<nav >
+    <ul>
+        <li><a href="index.html"> Home </a></li>
+        <li><a href="Sie_Reap.html"> Siem Reap</a></li>
+        <li><a href="Battambang.html">Battambang</a></li>
+        <li><a href="Kampot.html">Kampot</a></li>
+    </ul>
+</nav>
+<h1>Battambang Province</h1>
 </header>
 <br>
-
 <h2>Here are some of the popular things to see and do in Battambang province:</h2>
-
-
+<br>
+<main>
 <figure>
-    <img src="battambang_city.png" alt="Explore the city of Battambang" width="300" height="200">
-    <figcaption><strong>Battambang City </strong></figcaption>
+    <img src="psar_nat.png" alt="Explore the city of Battambang" width="300" height="200">
+    <figcaption><strong>Psaar Nat (Central Market): </strong> is the largest market in Battambang and is a great place to find souvenirs, such as clothing, silk scarves, and handicrafts.</figcaption>
    </figure>
    <figure>
     <img src="bamboo_train.png" alt="Take a ride on the Bamboo Train" width="300" height="200">
-    <figcaption><strong>Bamboo Train </strong></figcaption>
+    <figcaption><strong>Bamboo Train: </strong> is a homemade railway carriage that runs on a single track. You can ride the bamboo train through the countryside and enjoy the scenery.</figcaption>
    </figure>
    <figure>
-    <img src="sangkae_river.png" alt="Visit Sangkae river" width="300" height="200">
-    <figcaption><strong>Sangkae River </strong></figcaption>
+    <img src="banon.png" alt="Visit Sangkae river" width="300" height="200">
+    <figcaption><strong>Wat Banan: </strong>is a Hindu temple that is located on a hilltop. The climb to the temple is a bit challengin</figcaption>
    </figure>
    <figure>
     <img src="phnom_sompov.png" alt="Visit Phnom Sampeau" width="300" height="200">
-    <figcaption><strong>Phnom Sompeau </strong> </figcaption>
+    <figcaption><strong>Phnom Sompeau: </strong>Phnom Sampov is a home to a large bat colony, where you can watch as thousands of bats take flight from the cave.</figcaption>
    </figure>
+</main>
 
 <footer>
-    <p>  &copy;Travelling Destination 2024</p>
+    <p> &copy;Travelling Destination 2024</p>
 </footer>
 </body>
 </html>
