--- a/Final/Battambang.html
+++ b/Final/Battambang.html
@@ -32,11 +32,11 @@
    </figure>
    <figure>
     <img src="bamboo_train.png" alt="Take a ride on the Bamboo Train" width="300" height="200">
-    <figcaption><strong>Bamboo Train: </strong> is a homemade railway carriage that runs on a single track. You can ride the bamboo train through the countryside and enjoy the scenery.</figcaption>
+    <figcaption><strong>Bamboo Train: </strong> is a homemade railway carriage that you can ride the bamboo train through the countryside and enjoy the scenery.</figcaption>
    </figure>
    <figure>
     <img src="banon.png" alt="Visit Sangkae river" width="300" height="200">
-    <figcaption><strong>Wat Banan: </strong>is a Hindu temple that is located on a hilltop. The climb to the temple is a bit challengin</figcaption>
+    <figcaption><strong>Wat Banan: </strong>is a Hindu temple that is located on a hilltop. The climb to the temple is a bit challenging, although you can enjoy increedible view.</figcaption>
    </figure>
    <figure>
     <img src="phnom_sompov.png" alt="Visit Phnom Sampeau" width="300" height="200">
