--- a/Final/Battambang.html
+++ b/Final/Battambang.html
@@ -15,7 +15,7 @@
 <nav >
     <ul>
         <li><a href="index.html"> Home </a></li>
-        <li><a href="Sie_Reap.html"> Siem Reap</a></li>
+        <li><a href="Siem_Reap.html"> Siem Reap</a></li>
         <li><a href="Battambang.html">Battambang</a></li>
         <li><a href="Kampot.html">Kampot</a></li>
     </ul>
