--- a/Final/Kampot.html
+++ b/Final/Kampot.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-</body>
-</html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,22 +28,28 @@ header h1 {
   margin-bottom: 0;
 }
 
-#nav{
+#nav {
+  position: absolute;  
+  right: 0; 
+  top: 0;
   display: flex;
-  justify-content: space-around;;
   align-items: center;
   color:#FFFFFF
 }
-#nav h1{
+
+#nav h1 {
   color: aliceblue;
   font-size: 1rem;
   display: flex;
   font-family: cursive;             
 }
-#nav ul{
+
+#nav ul {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-end; 
 }
+
 #nav ul li{
   list-style: none;
   padding: 3px 15px 3px 15px;
