--- a/Final/Battambang.html
+++ b/Final/Battambang.html
@@ -12,7 +12,7 @@
 <!-- <p>Battambang province, located in northwestern Cambodia, offers a captivating blend of history, culture, and natural beauty. It's known for its rich history, beautiful scenery, and delicious cuisine. Battambang province is a great place to visit for those who want to experience the culture, history, and natural beauty of Cambodia. With its friendly people, delicious food, and unique attractions, Battambang is sure to leave a lasting impression on visitors.</p> -->
 
 
-<nav id="nav">
+<nav>
     <ul>
         <li><a href="index.html"> Home </a></li>
         <li><a href="Siem_Reap.html"> Siem Reap</a></li>
